Fix overflowing title

--- a/static/src/main.css
+++ b/static/src/main.css
@@ -89,8 +89,8 @@ body { min-height: 98vh; }
 */
 /*body > header { width: 100%; height: 400px; display: flex; flex-direction: column; justify-content: center; flex-wrap: wrap; border: 0.1px solid transparent; background: var(--bg-color) url("/img/art-artistic-arts-and-crafts-1153895_cropped.jpg") top left no-repeat; background-size: cover; color: var(--bg-color); text-shadow: 0px 1px 3px var(--font-color-muted); }*/
 body > header { width: 100%; height: 400px; display: flex; flex-direction: column; justify-content: center; flex-wrap: wrap; border: 0.1px solid transparent; background: var(--bg-color) url("/img/header_watch.jpg") no-repeat; background-size: cover; color: var(--bg-color); text-shadow: 0px 1px 3px var(--font-color-muted); }
-body > header > h1 { display: block; width: 90%; max-width: 900px; flex: 0 1 auto; margin: 0 auto 10px auto; }
-body > header > h2 { display: block; width: 90%; max-width: 900px; flex: 0 1 auto; margin: 0 auto; }
+body > header > h1 { display: block; width: 90%; max-width: 1000px; flex: 0 1 auto; margin: 0 auto 10px auto; }
+body > header > h2 { display: block; width: 90%; max-width: 1000px; flex: 0 1 auto; margin: 0 auto; }
 
 
 /* Main navigation */
